--- a/PW2_TareaPractica2/src/main/webapp/inicio.xhtml
+++ b/PW2_TareaPractica2/src/main/webapp/inicio.xhtml
@@ -12,42 +12,42 @@
 
 <h:body>
     <div class="card">
-        <h:form>
-            <p:growl id="msgs" showDetail="true" skipDetailIfEqualsSummary="true"/>
+        <p:panelGrid columns="3" layout="grid" styleClass="showcase-text-align-center">
+            <div></div>
+            <h:form>
+                <p:growl id="msgs" showDetail="true" skipDetailIfEqualsSummary="true"/>
 
-            <p:fieldset legend="Ingrese sus datos">
+                <p:fieldset legend="Ingrese sus datos">
 
-                <div class="card">
-                    <div class="grid ui-fluid">
-                        <div class="col-12 md:col-4">
-                            <div class="ui-inputgroup">
-                                <div class="ui-inputgroup-addon"><i class="pi pi-user"></i></div>
-                                <p:inputText placeholder="Username"/>
+                    <div class="card">
+                        <div class="grid ui-fluid">
+                            <div class="col-12 md:col-4">
+                                <div class="ui-inputgroup">
+                                    <div class="ui-inputgroup-addon"><i class="pi pi-user"></i></div>
+                                    <p:inputText placeholder="Username"/>
+                                </div>
                             </div>
-                        </div>
 
-                        <div class="col-12 md:col-4">
-                            <div class="ui-inputgroup">
-                                <div class="ui-inputgroup-addon">$</div>
-                                <p:inputText placeholder="Price"/>
-                                <div class="ui-inputgroup-addon">.00</div>
+                            <div class="col-12 md:col-4">
+                                <div class="ui-inputgroup">
+                                    <div class="ui-inputgroup-addon">$</div>
+                                    <p:inputText placeholder="Price"/>
+                                    <div class="ui-inputgroup-addon">.00</div>
+                                </div>
                             </div>
-                        </div>
 
-                        <div class="col-12 md:col-4">
-                            <div class="ui-inputgroup">
-                                <div class="ui-inputgroup-addon">www</div>
-                                <p:inputText placeholder="Website"/>
+                            <div class="col-12 md:col-4">
+                                <div class="ui-inputgroup">
+                                    <div class="ui-inputgroup-addon">www</div>
+                                    <p:inputText placeholder="Website"/>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-
-                <p:commandButton type="button" value="Submit" />
-
-            </p:fieldset>
-
-        </h:form>
+                    <p:commandButton type="button" value="Submit" />
+                </p:fieldset>
+            </h:form>
+        </p:panelGrid>
     </div>
 
 </h:body>
