--- a/PW2_TareaPractica2/src/main/webapp/inicio.xhtml
+++ b/PW2_TareaPractica2/src/main/webapp/inicio.xhtml
@@ -23,23 +23,15 @@
                         <div class="grid ui-fluid">
                             <div class="col-12 md:col-4">
                                 <div class="ui-inputgroup">
-                                    <div class="ui-inputgroup-addon"><i class="pi pi-user"></i></div>
-                                    <p:inputText placeholder="Username"/>
+                                    <div class="ui-inputgroup-addon"><i class="pi pi-wallet"></i></div>
+                                    <p:inputText placeholder="Número de Cuenta"/>
                                 </div>
                             </div>
 
                             <div class="col-12 md:col-4">
                                 <div class="ui-inputgroup">
-                                    <div class="ui-inputgroup-addon">$</div>
-                                    <p:inputText placeholder="Price"/>
-                                    <div class="ui-inputgroup-addon">.00</div>
-                                </div>
-                            </div>
-
-                            <div class="col-12 md:col-4">
-                                <div class="ui-inputgroup">
-                                    <div class="ui-inputgroup-addon">www</div>
-                                    <p:inputText placeholder="Website"/>
+                                    <div class="ui-inputgroup-addon"><i class="pi pi-key"></i></div>
+                                    <p:inputText placeholder="Pin de Seguridad"/>
                                 </div>
                             </div>
                         </div>
