--- a/PW2_TareaPractica2/src/main/webapp/inicio.xhtml
+++ b/PW2_TareaPractica2/src/main/webapp/inicio.xhtml
@@ -12,8 +12,7 @@
 
 <h:body>
     <div class="card">
-        <p:panelGrid columns="3" layout="grid" styleClass="showcase-text-align-center">
-            <div></div>
+        <p:panelGrid columns="1" layout="grid" styleClass="showcase-text-align-center">
             <h:form>
                 <p:growl id="msgs" showDetail="true" skipDetailIfEqualsSummary="true"/>
 
@@ -39,6 +38,42 @@
                     <p:commandButton type="button" value="Submit" />
                 </p:fieldset>
             </h:form>
+        </p:panelGrid>
+    </div>
+
+    <div class="card">
+        <p:panelGrid style="margin-top:20px" layout="tabular" columns="0">
+            <p:row>
+                <p:column></p:column>
+                <p:column>
+                    <h:form>
+                        <p:growl id="msgs" showDetail="true" skipDetailIfEqualsSummary="true"/>
+
+                        <p:fieldset legend="Ingrese sus datos">
+
+                            <div class="card">
+                                <div class="grid ui-fluid">
+                                    <div class="col-12 md:col-4">
+                                        <div class="ui-inputgroup">
+                                            <div class="ui-inputgroup-addon"><i class="pi pi-wallet"></i></div>
+                                            <p:inputText placeholder="Número de Cuenta"/>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-12 md:col-4">
+                                        <div class="ui-inputgroup">
+                                            <div class="ui-inputgroup-addon"><i class="pi pi-key"></i></div>
+                                            <p:inputText placeholder="Pin de Seguridad"/>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <p:commandButton type="button" value="Submit" />
+                        </p:fieldset>
+                    </h:form>
+                </p:column>
+                <p:column></p:column>
+            </p:row>
         </p:panelGrid>
     </div>
 
