--- a/PW2_TareaPractica2/src/main/webapp/retiros.xhtml
+++ b/PW2_TareaPractica2/src/main/webapp/retiros.xhtml
@@ -7,7 +7,7 @@
       xmlns:p="primefaces">
 
 <h:head>
-    <title>Depositos</title>
+    <title>Retiros</title>
 </h:head>
 
 <h:body style="margin: 2rem">
@@ -20,7 +20,7 @@
     <div style="display: flex; justify-content: center;">
         <p:card style="width: 25rem; margin-bottom: 2em;">
             <f:facet name="title">
-                Deposito
+                Retiro
             </f:facet>
 
             <h:form>
@@ -30,7 +30,7 @@
                     </div>
 
                 <div style="display: flex; justify-content: center; margin-top: 2rem">
-                    <p:commandButton type="button" value="Depositar" styleClass="ui-button-success" style="background: #52c234; color: white;"/>
+                    <p:commandButton type="button" value="Retirar" styleClass="ui-button-success" style="background: #52c234; color: white;"/>
                 </div>
             </h:form>
 
