--- a/PW2_TareaPractica2/src/main/webapp/inicio.xhtml
+++ b/PW2_TareaPractica2/src/main/webapp/inicio.xhtml
@@ -39,8 +39,8 @@
                             </div>
                         </div>
                     </div>
-                    <p:commandButton type="button" action="#{atmBean.redireccionDeposito()}" value="Depositos" style="margin-right: 2rem; min-width:10rem"/>
-                    <p:commandButton type="button" action="#{atmBean.redireccionRetiro()}" value="Retiros" style="min-width:10rem"/>
+                    <h:commandButton action="#{atmBean.redireccionDeposito}" value="Depositos" style="margin-right: 2rem; min-width:10rem; background: dodgerblue"/>
+                    <h:commandButton action="#{atmBean.redireccionRetiro}" value="Retiros" style="min-width:10rem; background: dodgerblue"/>
                 </p:fieldset>
             </h:form>
         </div>
