--- a/PW2_TareaPractica2/src/main/webapp/inicio.xhtml
+++ b/PW2_TareaPractica2/src/main/webapp/inicio.xhtml
@@ -19,6 +19,15 @@
 </style>
 
 <h:body style="height: 100dvh; display: grid; align-items: center">
+    <p:megaMenu orientation="horizontal" autoDisplay="false">
+        <p:submenu label="Opciones" icon="pi pi-fw pi-bars">
+            <p:column>
+                <p:submenu label="Ayuda">
+                    <p:menuitem value="Ayuda" outcome="ayuda.xhtml" update="messages" ajax="false" icon="pi pi-fw pi-search"/>
+                </p:submenu>
+            </p:column>
+        </p:submenu>
+    </p:megaMenu>
 
     <div>
         <p:outputPanel style="text-align: center; margin-bottom: 2rem;">
